--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -71,19 +71,19 @@
           </div>
 
           <div class="feed-item-content">
-            <div class="repo-title">
-              <svg class="repo-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+            <div class="feature-title">
+              <svg class="feature-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
                 fill="var(--color-fg-muted)">
                 <path
                   d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8Z">
                 </path>
               </svg>
-              <a [href]="item.repo.link" class="repo-name">
+              <a [href]="item.repo.link" class="feature-name">
                 {{item.repo.name}}
               </a>
             </div>
-            <p class="repo-description">{{item.repo.description}}</p>
-            <div class="repo-stats">
+            <p class="feature-description">{{item.repo.description}}</p>
+            <div class="feature-stats">
               @if (item.stats.language) {
               <span class="stat-item">
                 <span class="language-dot" [class]="item.stats.language.name.toLowerCase()"
