--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,12 +1,12 @@
 <div class="placeholder-wrapper">
   <!-- Section Copilot -->
   <header class="placeholder-header">
-    <h1>atomeek</h1>
+    <h1>terminal</h1>
   </header>
-  <div class="copilot-section">
-    <textarea class="copilot-input" placeholder="Ask Copilot" rows="1" (input)="handleCopilotInput($event)"></textarea>
+  <div class="terminal-section">
+    <textarea class="terminal-input" placeholder="Ask Copilot" rows="1" (input)="handleCopilotInput($event)"></textarea>
 
-    <div class="copilot-suggestions">
+    <div class="terminal-suggestions">
       <button class="suggestion-btn" (click)="handleSuggestion('profile')">
         <div class="suggestion-btn-icon" style="color: #10b981;">
           <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
