--- a/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
+++ b/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
@@ -1,11 +1,13 @@
 <div class="menu-brand" [class.config-collapsed]="configPanelCollapsed">
   <div class="menu-brand-content">
-    <h3 class="menu-brand-title">{{config?.navbar.centerTitle || ''}}</h3>
-    <p class="menu-brand-subtitle">
-      {{config?.navbar.centerSubtitle || ''}}
-      <span class="brand-btn-action" *ngIf="config?.navbar.centerBadge">
-        {{config?.navbar.centerBadge || ''}}
+    <div class="menu-brand-header">
+      <span>
+        <h1 class="menu-brand-title">{{config?.navbar.centerTitle || ''}}</h1>
       </span>
-    </p>
+      <span class="menu-brand-subtitle">{{config?.navbar.centerSubtitle || ''}}</span>
+    </div>
+    <span class="brand-btn-action" *ngIf="config?.navbar.centerBadge">
+      {{config?.navbar.centerBadge || ''}}
+    </span>
   </div>
 </div>
